# stellarHackathon

./: README.md  app.py  prison_management_system.db
linux/: make_logs_file.sh
static/css/: custom.css
stellar_blockchain/: README.md
stellar_blockchain/contracts/add_block/: Cargo.toml
stellar_blockchain/contracts/add_block/src/: lib.rs
stellar_blockchain/contracts/add_prisoner/: Cargo.toml  QuickCommands.md
stellar_blockchain/contracts/add_prisoner/src/: lib.rs  record.rs
stellar_project/: .bashrc  Cargo.toml  build.rs
stellar_project/src/: main.rs
templates/: base.html  home.html  management.html
useful_project_files/: make_database.py
