[package]
name = "add_block"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
